feat: complete basic UI mockup pages and prepare for Timefold integration

--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -382,10 +382,19 @@
       "active_employees": "Aktiv Personal",
       "travel_time": "Restid",
       "completion_rate": "Slutföringsgrad",
-      "staff_utilization": "Personalutnyttjande"
+      "staff_utilization": "Personalutnyttjande",
+      "visits": "Antal besök",
+      "total_time": "Total tid",
+      "completed": "Slutförda",
+      "staff": "Personal"
     },
     "page_title": "Schema | Caire",
-    "page_description": "Hantera och optimera ditt hemtjänstschema"
+    "page_description": "Hantera och optimera ditt hemtjänstschema",
+    "tabs": {
+      "timeline": "Tidslinje",
+      "grid": "Schema",
+      "map": "Karta"
+    }
   },
   "Auth": {
     "sign_in": {
